# cuda-quantum

./: .gitignore
qasm3-cudaq-validation-bench/: pyproject.toml  requirements.lock.txt
qasm3-cudaq-validation-bench/qasm3_scaling_canon/: clifford_n02_d020_s3234.qasm  clifford_n02_d020_s3235.qasm  clifford_n02_d020_s3236.qasm  clifford_n04_d040_s5234.qasm  clifford_n04_d040_s5235.qasm  clifford_n04_d040_s5236.qasm  clifford_n06_d060_s7234.qasm  clifford_n06_d060_s7235.qasm  clifford_n06_d060_s7236.qasm  clifford_n08_d080_s9234.qasm  clifford_n08_d080_s9235.qasm  clifford_n08_d080_s9236.qasm  clifford_n10_d100_s11234.qasm  clifford_n10_d100_s11235.qasm  clifford_n10_d100_s11236.qasm  clifford_n12_d120_s13234.qasm  clifford_n12_d120_s13235.qasm  clifford_n12_d120_s13236.qasm  clifford_n14_d140_s15234.qasm  clifford_n14_d140_s15235.qasm  clifford_n14_d140_s15236.qasm  clifford_n16_d160_s17234.qasm  clifford_n16_d160_s17235.qasm  clifford_n16_d160_s17236.qasm  clifford_n18_d180_s19234.qasm  clifford_n18_d180_s19235.qasm  clifford_n18_d180_s19236.qasm  ghz_02.qasm  ghz_03.qasm  ghz_04.qasm  ghz_05.qasm  ghz_06.qasm  ghz_07.qasm  ghz_08.qasm  ghz_09.qasm  ghz_10.qasm  ghz_11.qasm  ghz_12.qasm  ghz_13.qasm  ghz_14.qasm  (+4 more)
qasm3-cudaq-validation-bench/qasm3_tests/: bell.qasm  endianness_2q_x1.qasm  endianness_3q_x2.qasm  ghz3.qasm  rx_pi_over_2_single.qasm  rz_interference_pi_over_3.qasm  s_single.qasm  t_single.qasm  x_single.qasm  z_single.qasm
qasm3-cudaq-validation-bench/qasm3_xfail/: basis_01_swapped_measure.qasm  reset_single.qasm  two_qregs_mixed_ops.qasm
(+27 files in other folders)
