[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qcvb"
version = "0.1.0"
description = "OpenQASM 3 → CUDA-Q validation + backend benchmarking harness"
requires-python = ">=3.11,<3.12"
dependencies = ["numpy>=1.24"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
